@@ -3,6 +3,7 @@ Please view this file on the master branch, on stable branches it's out of date.
 v1.9.10.9
 * Länsförsäkringar: Remove broken web links
 * Improve Javadocs in the Bank class
+* Make successfully refreshing a disabled bank re-enable it
 
 v1.9.10.8 (2016-09-29)
 * Add a Volatile account to the Test Bank that always changes its balance.
